últimas alterações no index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -12,8 +12,6 @@
 </head>
 
 <body>
-    
-
     <main class="todo-container">
 
         <div class="list">
@@ -37,8 +35,7 @@
         </div>
 
     </main>
-
-    
+   
     <script src="./assets/js/main.js"></script>
 </body>
 
